@@ -12,6 +12,7 @@ import eu.gaiax.difs.fc.core.pojo.SdFilter;
 import eu.gaiax.difs.fc.core.pojo.SelfDescriptionMetadata;
 import eu.gaiax.difs.fc.core.pojo.Signature;
 import eu.gaiax.difs.fc.core.pojo.VerificationResult;
+import eu.gaiax.difs.fc.core.pojo.VerificationResultOffering;
 import eu.gaiax.difs.fc.core.service.filestore.impl.FileStoreImpl;
 import eu.gaiax.difs.fc.core.service.graphdb.impl.Neo4jGraphStore;
 import eu.gaiax.difs.fc.core.service.sdstore.SelfDescriptionStore;
@@ -33,13 +34,13 @@ import org.apache.commons.lang3.mutable.MutableInt;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.Assertions;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.MethodOrderer;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.api.TestMethodOrder;
-import org.neo4j.driver.springframework.boot.test.autoconfigure.Neo4jTestHarnessAutoConfiguration;
 import org.neo4j.harness.Neo4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.SpringApplication;
@@ -71,7 +72,7 @@ public class SelfDescriptionStoreImplTest {
   @SpringBootApplication
   public static class TestApplication {
 
-    public static void main(String[] args) {
+    public static void main(final String[] args) {
       SpringApplication.run(TestApplication.class, args);
     }
   }
@@ -97,8 +98,8 @@ public class SelfDescriptionStoreImplTest {
       embeddedDatabaseServer.close();
   }
 
-  private SelfDescriptionMetadata createSelfDescriptionMeta(String id, String issuer, OffsetDateTime sdt,
-      OffsetDateTime udt, String content) {
+  private static SelfDescriptionMetadata createSelfDescriptionMeta(final String id, final String issuer,
+      final OffsetDateTime sdt, final OffsetDateTime udt, final String content) {
     final String hash = HashUtils.calculateSha256AsHex(content);
     SelfDescriptionMetadata sdMeta = new SelfDescriptionMetadata();
     sdMeta.setId(id);
@@ -111,14 +112,33 @@ public class SelfDescriptionStoreImplTest {
     return sdMeta;
   }
 
-  private List<SdClaim> createClaims() {
+  private static List<SdClaim> createClaims() {
     final SdClaim claim1 = new SdClaim("https://delta-dao.com/.well-known/serviceMVGPortal.json",
         "gax-service:providedBy", "https://delta-dao.com/.well-known/participant.json");
     final SdClaim claim2 = new SdClaim("https://delta-dao.com/.well-known/serviceMVGPortal.json", "gax-service:name", "EuProGigant Portal");
     final SdClaim claim3 = new SdClaim("https://delta-dao.com/.well-known/serviceMVGPortal.json", "gax-service:description", "EuProGigant Minimal Viable Gaia-X Portal");
     final SdClaim claim4 = new SdClaim("https://delta-dao.com/.well-known/serviceMVGPortal.json", "gax-service:TermsAndConditions", "https://euprogigant.com/en/terms/");
     final SdClaim claim5 = new SdClaim("https://delta-dao.com/.well-known/serviceMVGPortal.json", "gax-service:TermsAndConditions", "contentHash");
-    return Arrays.asList(new SdClaim[] {claim1, claim2, claim3, claim4, claim5});
+    return List.of(claim1, claim2, claim3, claim4, claim5);
+  }
+
+  private static VerificationResult createVerificationResult(final int idSuffix) {
+    return new VerificationResultOffering("id" + idSuffix, "issuer" + idSuffix, OffsetDateTime.now(),
+        SelfDescriptionStatus.ACTIVE.getValue(), LocalDate.now(), new ArrayList<Signature>(), createClaims());
+  }
+
+  // Since SdMetaRecord class extends SelfDescriptionMetadata class instead of being formed from it, then check
+  // in the equals method will always be false. Because we are downcasting SdMetaRecord to SelfDescriptionMetadata.
+  private static void assertThatSdHasTheSameData(final SelfDescriptionMetadata excepted,
+      final SelfDescriptionMetadata actual) {
+    assertEquals(actual.getId(), excepted.getId());
+    assertEquals(actual.getSdHash(), excepted.getSdHash());
+    assertEquals(actual.getStatus(), excepted.getStatus());
+    assertEquals(actual.getIssuer(), excepted.getIssuer());
+    assertEquals(actual.getValidators(), excepted.getValidators());
+    assertEquals(actual.getUploadDatetime(), excepted.getUploadDatetime());
+    assertEquals(actual.getStatusDatetime(), excepted.getStatusDatetime());
+    assertEquals(actual.getSelfDescription(), excepted.getSelfDescription());
   }
 
   private void assertStoredSdFiles(final int expected) {
@@ -147,13 +167,10 @@ public class SelfDescriptionStoreImplTest {
     final SelfDescriptionMetadata sdMeta = createSelfDescriptionMeta("TestSd/1", "TestUser/1",
         OffsetDateTime.parse("2022-01-01T12:00:00Z"), OffsetDateTime.parse("2022-01-02T12:00:00Z"), content);
     final String hash = sdMeta.getSdHash();
-    final VerificationResult vr = new VerificationResult("vhash", createClaims(), new ArrayList<Signature>(),
-        OffsetDateTime.now(), "lifecyclestatus", "issuer", LocalDate.now());
-    sdStore.storeSelfDescription(sdMeta, vr);
+    sdStore.storeSelfDescription(sdMeta, createVerificationResult(0));
     assertStoredSdFiles(1);
 
-    final SelfDescriptionMetadata byHash = sdStore.getByHash(hash);
-    assertEquals(sdMeta, byHash);
+    assertThatSdHasTheSameData(sdMeta, sdStore.getByHash(hash));
 
     final ContentAccessor sdfileByHash = sdStore.getSDFileByHash(hash);
     assertEquals(sdfileByHash, sdMeta.getSelfDescription(),
@@ -181,25 +198,20 @@ public class SelfDescriptionStoreImplTest {
         OffsetDateTime.parse("2022-01-01T12:00:00Z"), OffsetDateTime.parse("2022-01-02T12:00:00Z"), content1);
     final String hash1 = sdMeta1.getSdHash();
     sdMeta1.setSelfDescription(new ContentAccessorDirect(content1));
-    final VerificationResult vr1 = new VerificationResult("vhash1", createClaims(), new ArrayList<Signature>(),
-        OffsetDateTime.now(), "lifecyclestatus1", "issuer1", LocalDate.now());
-    sdStore.storeSelfDescription(sdMeta1, vr1);
+    sdStore.storeSelfDescription(sdMeta1, createVerificationResult(1));
     assertStoredSdFiles(1);
 
     final SelfDescriptionMetadata sdMeta2 = createSelfDescriptionMeta("TestSd/1", "TestUser/1",
         OffsetDateTime.parse("2022-01-01T13:00:00Z"), OffsetDateTime.parse("2022-01-02T13:00:00Z"), content2);
     final String hash2 = sdMeta2.getSdHash();
-    final VerificationResult vr2 = new VerificationResult("vhash2", createClaims(), new ArrayList<Signature>(),
-        OffsetDateTime.now(), "lifecyclestatus2", "issuer2", LocalDate.now());
-    sdStore.storeSelfDescription(sdMeta2, vr2);
+    sdStore.storeSelfDescription(sdMeta2, createVerificationResult(2));
     assertStoredSdFiles(2);
 
     final SelfDescriptionMetadata byHash1 = sdStore.getByHash(hash1);
     assertEquals(SelfDescriptionStatus.DEPRECATED, byHash1.getStatus(),
         "First self-description should have been depricated.");
-    Assertions.assertTrue(byHash1.getStatusDatetime().isAfter(sdMeta1.getStatusDatetime()));
-    final SelfDescriptionMetadata byHash2 = sdStore.getByHash(hash2);
-    assertEquals(sdMeta2, byHash2);
+    assertTrue(byHash1.getStatusDatetime().isAfter(sdMeta1.getStatusDatetime()));
+    assertThatSdHasTheSameData(sdMeta2, sdStore.getByHash(hash2));
 
     sdStore.deleteSelfDescription(hash1);
     sdStore.deleteSelfDescription(hash2);
@@ -222,17 +234,13 @@ public class SelfDescriptionStoreImplTest {
     final SelfDescriptionMetadata sdMeta1 = createSelfDescriptionMeta("TestSd/1", "TestUser/1",
         OffsetDateTime.parse("2022-01-01T12:00:00Z"), OffsetDateTime.parse("2022-01-02T12:00:00Z"), content1);
     final String hash1 = sdMeta1.getSdHash();
-    final VerificationResult vr1 = new VerificationResult("vhash1", createClaims(), new ArrayList<Signature>(),
-        OffsetDateTime.now(), "lifecyclestatus1", "issuer1", LocalDate.now());
-    sdStore.storeSelfDescription(sdMeta1, vr1);
+    sdStore.storeSelfDescription(sdMeta1, createVerificationResult(1));
     assertStoredSdFiles(1);
 
     final SelfDescriptionMetadata sdMeta2 = createSelfDescriptionMeta("TestSd/1", "TestUser/1",
         OffsetDateTime.parse("2022-01-01T13:00:00Z"), OffsetDateTime.parse("2022-01-02T13:00:00Z"), content1);
     Assertions.assertThrows(ConflictException.class, () -> {
-      final VerificationResult vr2 = new VerificationResult("vhash2", createClaims(), new ArrayList<Signature>(),
-          OffsetDateTime.now(), "lifecyclestatus2", "issuer2", LocalDate.now());
-      sdStore.storeSelfDescription(sdMeta2, vr2);
+      sdStore.storeSelfDescription(sdMeta2, createVerificationResult(2));
     });
 
     final int count = IterableUtils.size(fileStore.getFileIterable(SelfDescriptionStore.STORE_NAME));
@@ -261,13 +269,11 @@ public class SelfDescriptionStoreImplTest {
     final SelfDescriptionMetadata sdMeta = createSelfDescriptionMeta("TestSd/1", "TestUser/1",
         OffsetDateTime.parse("2022-01-01T12:00:00Z"), OffsetDateTime.parse("2022-01-02T12:00:00Z"), content);
     final String hash = sdMeta.getSdHash();
-    final VerificationResult vr = new VerificationResult("vhash", createClaims(), new ArrayList<Signature>(),
-        OffsetDateTime.now(), "lifecyclestatus", "issuer", LocalDate.now());
-    sdStore.storeSelfDescription(sdMeta, vr);
+    sdStore.storeSelfDescription(sdMeta, createVerificationResult(0));
     assertStoredSdFiles(1);
 
     SelfDescriptionMetadata byHash = sdStore.getByHash(hash);
-    assertEquals(sdMeta, byHash);
+    assertThatSdHasTheSameData(sdMeta, byHash);
 
     sdStore.changeLifeCycleStatus(hash, SelfDescriptionStatus.REVOKED);
     byHash = sdStore.getByHash(hash);
@@ -301,9 +307,7 @@ public class SelfDescriptionStoreImplTest {
     final OffsetDateTime uploadTime = OffsetDateTime.parse("2022-01-02T12:00:00Z");
     final SelfDescriptionMetadata sdMeta = createSelfDescriptionMeta(id, issuer, statusTime, uploadTime, content);
     final String hash = sdMeta.getSdHash();
-    final VerificationResult vr = new VerificationResult("vhash", createClaims(), new ArrayList<Signature>(),
-        OffsetDateTime.now(), "lifecyclestatus", "issuer", LocalDate.now());
-    sdStore.storeSelfDescription(sdMeta, vr);
+    sdStore.storeSelfDescription(sdMeta, createVerificationResult(0));
     assertStoredSdFiles(1);
 
     final SdFilter filterParams = new SdFilter();
@@ -337,9 +341,7 @@ public class SelfDescriptionStoreImplTest {
     final OffsetDateTime uploadTime = OffsetDateTime.parse("2022-01-02T12:00:00Z");
     final SelfDescriptionMetadata sdMeta = createSelfDescriptionMeta(id, issuer, statusTime, uploadTime, content);
     final String hash = sdMeta.getSdHash();
-    final VerificationResult vr = new VerificationResult("vhash", createClaims(), new ArrayList<Signature>(),
-        OffsetDateTime.now(), "lifecyclestatus", "issuer", LocalDate.now());
-    sdStore.storeSelfDescription(sdMeta, vr);
+    sdStore.storeSelfDescription(sdMeta, createVerificationResult(0));
     assertStoredSdFiles(1);
 
     final SdFilter filterParams = new SdFilter();
@@ -374,9 +376,7 @@ public class SelfDescriptionStoreImplTest {
     final OffsetDateTime uploadTime = OffsetDateTime.parse("2022-01-02T12:00:00Z");
     final SelfDescriptionMetadata sdMeta = createSelfDescriptionMeta(id, issuer, statusTime, uploadTime, content);
     final String hash = sdMeta.getSdHash();
-    final VerificationResult vr = new VerificationResult("vhash", createClaims(), new ArrayList<Signature>(),
-        OffsetDateTime.now(), "lifecyclestatus", "issuer", LocalDate.now());
-    sdStore.storeSelfDescription(sdMeta, vr);
+    sdStore.storeSelfDescription(sdMeta, createVerificationResult(0));
     assertStoredSdFiles(1);
 
     final SdFilter filterParams = new SdFilter();
@@ -411,9 +411,7 @@ public class SelfDescriptionStoreImplTest {
     final OffsetDateTime uploadTime = OffsetDateTime.parse("2022-01-02T12:00:00Z");
     final SelfDescriptionMetadata sdMeta = createSelfDescriptionMeta(id, issuer, statusTime, uploadTime, content);
     final String hash = sdMeta.getSdHash();
-    final VerificationResult vr = new VerificationResult("vhash", createClaims(), new ArrayList<Signature>(),
-        OffsetDateTime.now(), "lifecyclestatus", "issuer", LocalDate.now());
-    sdStore.storeSelfDescription(sdMeta, vr);
+    sdStore.storeSelfDescription(sdMeta, createVerificationResult(0));
     assertStoredSdFiles(1);
 
     final SdFilter filterParams = new SdFilter();
@@ -461,15 +459,9 @@ public class SelfDescriptionStoreImplTest {
     final String hash1 = sdMeta1.getSdHash();
     final String hash2 = sdMeta2.getSdHash();
     final String hash3 = sdMeta3.getSdHash();
-    final VerificationResult vr1 = new VerificationResult("vhash1", createClaims(), new ArrayList<Signature>(),
-        OffsetDateTime.now(), "lifecyclestatus1", "issuer1", LocalDate.now());
-    final VerificationResult vr2 = new VerificationResult("vhash2", createClaims(), new ArrayList<Signature>(),
-        OffsetDateTime.now(), "lifecyclestatus2", "issuer2", LocalDate.now());
-    final VerificationResult vr3 = new VerificationResult("vhash3", createClaims(), new ArrayList<Signature>(),
-        OffsetDateTime.now(), "lifecyclestatus3", "issuer3", LocalDate.now());
-    sdStore.storeSelfDescription(sdMeta1, vr1);
-    sdStore.storeSelfDescription(sdMeta2, vr2);
-    sdStore.storeSelfDescription(sdMeta3, vr3);
+    sdStore.storeSelfDescription(sdMeta1, createVerificationResult(1));
+    sdStore.storeSelfDescription(sdMeta2, createVerificationResult(2));
+    sdStore.storeSelfDescription(sdMeta3, createVerificationResult(3));
     assertStoredSdFiles(3);
 
     final SdFilter filterParams = new SdFilter();
@@ -530,15 +522,9 @@ public class SelfDescriptionStoreImplTest {
     final String hash1 = sdMeta1.getSdHash();
     final String hash2 = sdMeta2.getSdHash();
     final String hash3 = sdMeta3.getSdHash();
-    final VerificationResult vr1 = new VerificationResult("vhash1", createClaims(), new ArrayList<Signature>(),
-        OffsetDateTime.now(), "lifecyclestatus1", "issuer1", LocalDate.now());
-    final VerificationResult vr2 = new VerificationResult("vhash2", createClaims(), new ArrayList<Signature>(),
-        OffsetDateTime.now(), "lifecyclestatus2", "issuer2", LocalDate.now());
-    final VerificationResult vr3 = new VerificationResult("vhash3", createClaims(), new ArrayList<Signature>(),
-        OffsetDateTime.now(), "lifecyclestatus3", "issuer3", LocalDate.now());
-    sdStore.storeSelfDescription(sdMeta1, vr1);
-    sdStore.storeSelfDescription(sdMeta2, vr2);
-    sdStore.storeSelfDescription(sdMeta3, vr3);
+    sdStore.storeSelfDescription(sdMeta1, createVerificationResult(1));
+    sdStore.storeSelfDescription(sdMeta2, createVerificationResult(2));
+    sdStore.storeSelfDescription(sdMeta3, createVerificationResult(3));
     assertStoredSdFiles(3);
 
     final SdFilter filterParams = new SdFilter();
@@ -587,9 +573,7 @@ public class SelfDescriptionStoreImplTest {
     final OffsetDateTime uploadTime = OffsetDateTime.parse("2022-01-02T12:00:00Z");
     final SelfDescriptionMetadata sdMeta = createSelfDescriptionMeta(id, issuer, statusTime, uploadTime, content);
     final String hash = sdMeta.getSdHash();
-    final VerificationResult vr = new VerificationResult("vhash", createClaims(), new ArrayList<Signature>(),
-        OffsetDateTime.now(), "lifecyclestatus", "issuer", LocalDate.now());
-    sdStore.storeSelfDescription(sdMeta, vr);
+    sdStore.storeSelfDescription(sdMeta, createVerificationResult(0));
     assertStoredSdFiles(1);
 
     final SdFilter filterParams = new SdFilter();
@@ -636,15 +620,9 @@ public class SelfDescriptionStoreImplTest {
     final String hash1 = sdMeta1.getSdHash();
     final String hash2 = sdMeta2.getSdHash();
     final String hash3 = sdMeta3.getSdHash();
-    final VerificationResult vr1 = new VerificationResult("vhash1", createClaims(), new ArrayList<Signature>(),
-        OffsetDateTime.now(), "lifecyclestatus1", "issuer1", LocalDate.now());
-    final VerificationResult vr2 = new VerificationResult("vhash2", createClaims(), new ArrayList<Signature>(),
-        OffsetDateTime.now(), "lifecyclestatus2", "issuer2", LocalDate.now());
-    final VerificationResult vr3 = new VerificationResult("vhash3", createClaims(), new ArrayList<Signature>(),
-        OffsetDateTime.now(), "lifecyclestatus3", "issuer3", LocalDate.now());
-    sdStore.storeSelfDescription(sdMeta1, vr1);
-    sdStore.storeSelfDescription(sdMeta2, vr2);
-    sdStore.storeSelfDescription(sdMeta3, vr3);
+    sdStore.storeSelfDescription(sdMeta1, createVerificationResult(1));
+    sdStore.storeSelfDescription(sdMeta2, createVerificationResult(2));
+    sdStore.storeSelfDescription(sdMeta3, createVerificationResult(3));
     assertStoredSdFiles(3);
 
     final SdFilter filterParams = new SdFilter();
